--- a/MvcMovie/Views/Movies/Create.cshtml
+++ b/MvcMovie/Views/Movies/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model MvcMovie.Models.Movie
+﻿@model MvcMovie.Models.MovieCreateViewModel
+
 
 @{
     ViewData["Title"] = "Create";
@@ -24,9 +25,14 @@
                 <span asp-validation-for="ReleaseDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
-                <span asp-validation-for="Genre" class="text-danger"></span>
+                <label asp-for="GenreId" class="control-label">Genre</label>
+                <select asp-for="GenreId" class="form-control" asp-items="Model.Genres"></select>
+                <span asp-validation-for="GenreId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DirectorId" class="control-label">Director</label>
+                <select asp-for="DirectorId" class="form-control" asp-items="Model.Directors"></select>
+                <span asp-validation-for="DirectorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
