--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Our Movie Collection</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -34,6 +34,9 @@
                 @Html.DisplayNameFor(model => model.Movies![0].Genre)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Movies![0].Director)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Movies![0].Price)
             </th>
             <th>
@@ -53,7 +56,10 @@
                     @Html.DisplayFor(modelItem => item.ReleaseDate)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Genre)
+                    @Html.DisplayFor(modelItem => item.Genre.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Director.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Price)
